<resources>
    <string name="CPU">CPU</string>
    <string name="GPU">GPU</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_learn_message">The Game Assistant has intelligently generated an X gravity control scheme according to your operating habits, use it now? \nYou can also manually apply the intelligent control scheme in the X gravity plug-in later.</string>
    <string name="action_learn_tip1">Key schemes are intelligent generated by learning the player’s action habits</string>
    <string name="action_learn_tip2">It can be modified later in the superpower base</string>
    <string name="action_learn_tip2_confirm">Enable intelligent learning?</string>
    <string name="action_learn_view_manual">View manually later</string>
    <string name="action_learn_view_now">View now</string>
    <string name="action_mode_done">Done</string>
    <string name="activity_resolver_use_always">Always</string>
    <string name="activity_resolver_use_once">Just once</string>
    <string name="ai_detect_help">Gunshot direction indicator: makes in-game sounds like footsteps and gunshots easier to locate</string>
    <string name="ai_detect_introduction">Gunshot direction indication</string>
    <string name="ai_speaker_demi_introduction">Demi Chat Helper</string>
    <string name="ai_speaker_help">Mora assisted chat, Mora AI recognizes in-game voice chat content and replies automatically</string>
    <string name="ai_speaker_introduction">Mora Chat Helper</string>
    <string name="aiagent_disabled_function">%s is off. Turn it on?</string>
    <string name="aiagent_guide_to_game">This operation needs to be done in the game</string>
    <string name="aiagent_guide_to_game_space">This operation needs to be done in the game lobby</string>
    <string name="aiagent_handled">I have already done it for you</string>
    <string name="aiagent_ok">OK</string>
    <string name="aiagent_open_function_settings">The %s settings have been opened for you</string>
    <string name="aiagent_to_be_supported">Mora is still learning this ability</string>
    <string name="aiagent_turn_off_function"> %s has been closed for you</string>
    <string name="aiagent_turn_on_function"> %s has been opened for you</string>
    <string name="aiagent_uninitial_function"> %s hasn\'t been set up yet. Set it up now?</string>
    <string name="aiagent_unsupported">This feature is not yet supported</string>
    <string name="aiagent_wait_to_think">Let me think about it</string>
    <string name="aiagent_winning_rate_prediction">Current win rate is %1$d%%</string>
    <string name="alwaysUse">Always complete such an action using this app</string>
    <string name="am">AM</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_clone">App Clone</string>
    <string name="app_is_disabled">App disabled</string>
    <string name="app_label">Game Helper</string>
    <string name="app_not_install">Application not yet installed</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="authority_title">Require permissions</string>
    <string name="back_button_label">Back</string>
    <string name="battery_level_template"> %d%%</string>
    <string name="biablo_mode_dialog_content">When turned on, Red Magic Time and manual recording will be closed</string>
    <string name="biablo_mode_dialog_content2">When turned on, Red Magic Moment and On-demand recording will be turned off</string>
    <string name="biablo_mode_dialog_content_internal">When turned on, Manual recording will be closed</string>
    <string name="biablo_mode_dialog_content_internal2">When enabled, On-demand recording will be turned off</string>
    <string name="biablo_mode_dialog_content_zte">When turned on, Wonderful Time and manual recording will be closed</string>
    <string name="biablo_mode_dialog_content_zte2">When turned on, Highlight moments and On-demand recording will be turned off</string>
    <string name="biablo_mode_dialog_title">After turning on, the power consumption and heating are greatly increased</string>
    <string name="bigfold_detect_show_tip">It is detected that the unfolding status of the phone has changed, which may cause game display or touch control issues. Do you want to restart the game?</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="brightness_lable">Brightness</string>
    <string name="browser_is_not_exist">No browsers available</string>
    <string name="browser_is_stopped">Browser stopped</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_set">Settings</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_kt">Cancel</string>
    <string name="cancel_set_multi_sub_screen">Do not enable at this time</string>
    <string name="capital_off">OFF</string>
    <string name="capital_on">ON</string>
    <string name="cast_conflict_alert">Currently connected%1$s. To connect%2$s, you need to disconnect the current connection. Do you want to continue?</string>
    <string name="cc_pips_game">game_wechat,game_qq,game_browser</string>
    <string name="cc_pips_game_international">whatsapp,discord,telegram</string>
    <string name="cc_tiles_game">liquid_cool,image_search,game_benefit,low_sugar,link_mics_translation,wifi,active_mode,refreshrate,voice,performance_monitor,manual_record,fan,rotaton_lock,record,clean,mis_operate,charge_separation,game_reminder,handle,virtual_handle,wifidisplay,afk,snap,tel,competition_light,multi_sub_screen,game_custom</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close_virtual_to_try">Please exit the joystick mode first</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="confirm">Ok</string>
    <string name="custome_title">Drag and drop to adjust the order</string>
    <string name="dialog_btn_know">I know</string>
    <string name="dialog_game_box_open_not_devices_content2">The casting screen coexists with the mobile phone display (screen caster) and can be used independently.\n You can connect keyboard and mouse devices via wired or Bluetooth for operation.</string>
    <string name="dialog_game_box_open_not_devices_sub_content">The host mode can be turned on or off in “Game Space-Personal Center”</string>
    <string name="dialog_game_box_to_bluetooth_setting">Go to Connecting Bluetooth Devices</string>
    <string name="drag_plugin_item">Drag the handle up and down to adjust the plug-in sequence</string>
    <string name="monitor_dialog_mouse_sensitivity">Mouse sensitivity</string>
    <string name="monitor_dialog_setting_title">Set</string>
    <string name="nubia_game_performance_mode_0">Eco</string>
    <string name="nubia_game_performance_mode_1">Balance</string>
    <string name="nubia_game_performance_mode_2">Rise</string>
    <string name="nubia_game_performance_mode_3">Infiniti</string>
    <string name="nubia_game_performance_mode_diablo_content">  (highest performance, high power consumption, high heat generation)</string>
    <string name="nubia_game_performance_mode_diablo_title">Diablo Mode</string>
    <string name="nubia_game_performance_super_dialog_cancel">Cancel</string>
    <string name="nubia_game_performance_super_dialog_ok">Ok</string>
    <string name="nubia_game_performance_super_dialog_title">After selecting this mode，Using higher performance may increase power consumption and heat generation</string>
    <string name="performance_widget_12_hours_format">h:mm</string>
    <string name="performance_widget_24_hours_format">kk:mm</string>
    <string name="plugin_label_action_learn">Behavioral learning</string>
    <string name="quick">fast</string>
    <string name="slow">slow</string>
</resources>