<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/background_user_guide"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="@dimen/user_guide_dialog_title_size"
        android:textColor="#ffffff"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/user_guide_dialog_title_margin_top"
        android:layout_marginBottom="@dimen/user_guide_dialog_title_margin_bottom"
        android:text="@string/plugin_label_action_learn"/>
    <TextView
        android:textSize="@dimen/user_guide_dialog_content_size"
        android:textColor="#50ffffff"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/user_guide_dialog_content_margin_bottom"
        android:text="@string/action_learn_message"
        android:paddingStart="@dimen/user_guide_dialog_content_padding"
        android:paddingEnd="@dimen/user_guide_dialog_content_padding"/>
    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/user_guide_dialog_button_margin_bottom">
        <cn.nubia.gameassist.tips.learn.MarqueeButton
            android:id="@+id/btn_view_manual"
            android:text="@string/action_learn_view_manual"
            style="@style/button_dialog_user_guide_style"/>
        <cn.nubia.gameassist.tips.learn.MarqueeButton
            android:id="@+id/btn_view_now"
            android:text="@string/action_learn_view_now"
            android:layout_marginStart="@dimen/user_guide_dialog_button_margin_start"
            style="@style/button_dialog_user_guide_style"/>
    </LinearLayout>
</LinearLayout>
