<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="14sp"
            android:textColor="@color/dialog_message_text_color"
            android:gravity="center_horizontal"
            android:id="@+id/tv_dialog_message"
            android:paddingLeft="23dp"
            android:paddingRight="23dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/dialog_game_box_open_not_devices_content2"/>
        <TextView
            android:textSize="12sp"
            android:textColor="@color/dialog_message_text_color"
            android:gravity="center_horizontal"
            android:id="@+id/tv_dialog_sub_message"
            android:paddingLeft="23dp"
            android:paddingRight="23dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/dialog_game_box_open_not_devices_sub_content"/>
        <Button
            android:id="@+id/btn_know"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp"
            android:text="@string/dialog_btn_know"
            style="@style/Widget.ZTE.Light.Button"/>
        <TextView
            android:textSize="15sp"
            android:textColor="#f44234"
            android:id="@+id/tv_to_bluetooth_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="@dimen/gamebox_dialog_btn_setting_mb"
            android:text="@string/dialog_game_box_to_bluetooth_setting"/>
    </LinearLayout>
</ScrollView>
