<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/monitor_dialog_setting_bg"
    android:layout_width="@dimen/monitor_dialog_width"
    android:layout_height="@dimen/monitor_dialog_height">
    <FrameLayout
        android:background="@drawable/monitor_dialog_setting_top_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/monitor_dialog_title_height">
        <TextView
            android:textSize="@dimen/monitor_dialog_title_text_size"
            android:textColor="#fff"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monitor_dialog_setting_title"
            android:paddingStart="@dimen/monitor_dialog_title_ps"/>
        <ImageView
            android:layout_gravity="end"
            android:id="@+id/iv_close"
            android:layout_width="@dimen/monitor_dialog_title_height"
            android:layout_height="@dimen/monitor_dialog_title_height"
            android:src="@drawable/monitor_dialog_close"/>
    </FrameLayout>
    <TextView
        android:textSize="@dimen/monitor_dialog_text_size"
        android:textColor="#fff"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monitor_dialog_mouse_sensitivity"
        android:paddingStart="@dimen/monitor_dialog_title_ps"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/setting_seekbar_tag_text_size"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slow"
            android:alpha="0.5"
            android:paddingStart="@dimen/monitor_dialog_title_ps"/>
        <TextView
            android:textSize="@dimen/setting_seekbar_tag_text_size"
            android:textColor="#fff"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quick"
            android:alpha="0.5"
            android:paddingEnd="@dimen/monitor_dialog_title_ps"/>
        <SeekBar
            android:id="@+id/sb_mouse_sensitivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/setting_seekbar_mt"
            android:layout_marginBottom="@dimen/setting_seekbar_mb"
            android:maxHeight="@dimen/setting_seekbar_progress_max_height"
            android:max="14"
            android:progress="7"
            android:progressDrawable="@drawable/seekbar_mouse_sensitivity_bg"
            android:thumb="@drawable/seekbar_thumb"
            android:thumbOffset="0dp"
            android:paddingStart="@dimen/monitor_dialog_title_ps"
            android:paddingEnd="@dimen/monitor_dialog_title_ps"
            android:splitTrack="false"/>
    </FrameLayout>
</LinearLayout>
