<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center"
    android:background="@drawable/nubia_game_strengthen_mask"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <FrameLayout
        android:layout_gravity="bottom|center_horizontal"
        android:background="@drawable/nubia_game_strengthen_performance_super_dialog_bg"
        android:layout_width="360dp"
        android:layout_height="188.67dp">
        <TextView
            android:textSize="17.5dp"
            android:textColor="@android:color/white"
            android:gravity="center_horizontal"
            android:id="@+id/nubia_game_strengthen_performance_super_title"
            android:paddingLeft="27dp"
            android:paddingTop="39.33dp"
            android:paddingRight="27dp"
            android:layout_width="360dp"
            android:layout_height="188.67dp"
            android:text="@string/nubia_game_performance_super_dialog_title"/>
        <TextView
            android:textSize="15sp"
            android:textColor="#d9ffffff"
            android:gravity="center"
            android:layout_gravity="bottom|left"
            android:id="@+id/nubia_game_strengthen_performance_super_cancel"
            android:background="@drawable/nubia_game_strengthen_performance_confirm_bg"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="23dp"
            android:text="@string/nubia_game_performance_super_dialog_cancel"/>
        <TextView
            android:textSize="15sp"
            android:textColor="#d9ffffff"
            android:gravity="center"
            android:layout_gravity="bottom|right"
            android:id="@+id/nubia_game_strengthen_performance_super_ok"
            android:background="@drawable/nubia_game_strengthen_performance_confirm_bg"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="23dp"
            android:text="@string/nubia_game_performance_super_dialog_ok"/>
    </FrameLayout>
</FrameLayout>
