<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <cn.nubia.gameassist.performance.PerformanceCircleView
            android:id="@+id/performance_view_cpu"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="13dp"
            android:layout_marginStart="28dp"
            app:isCpuType="true"
            app:text="CPU"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextClock
                android:textSize="17dp"
                android:textColor="#ffd7d7d7"
                android:gravity="center_horizontal"
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:format12Hour="@string/performance_widget_12_hours_format"
                android:format24Hour="@string/performance_widget_24_hours_format"/>
            <cn.nubia.gameassist.performance.PerformanceBgView
                android:id="@+id/performance_bg"
                android:layout_width="82dp"
                android:layout_height="82dp"
                android:layout_centerHorizontal="true"/>
            <ImageView
                android:id="@+id/logo"
                android:layout_width="70dp"
                android:layout_height="8dp"
                android:layout_marginTop="45dp"
                android:src="@drawable/performance_logo"
                android:layout_centerHorizontal="true"/>
            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="79dp">
                <cn.nubia.gameassist.performance.PerformanceStatusView
                    android:textSize="9dp"
                    android:textColor="#ffd7d7d7"
                    android:id="@+id/electricity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/battery_icon"
                    android:layout_marginStart="4dp"
                    app:isBatteryLevelType="true"/>
                <cn.nubia.gameassist.performance.PerformanceStatusView
                    android:textSize="9dp"
                    android:textColor="#ffd7d7d7"
                    android:id="@+id/net_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/netspeed_icon"
                    android:layout_marginStart="38dp"
                    app:isBatteryLevelType="false"/>
            </RelativeLayout>
        </RelativeLayout>
        <cn.nubia.gameassist.performance.PerformanceCircleView
            android:id="@+id/performance_view_gpu"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="28dp"
            app:isCpuType="false"
            app:text="GPU"/>
    </LinearLayout>
    <FrameLayout
        android:layout_gravity="center_horizontal"
        android:background="@drawable/radio_button_bg"
        android:layout_width="227dp"
        android:layout_height="32dp"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/nubia_game_performance_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <cn.nubia.gameassist.performance.NubiaPerformanceRadioButton
                android:textColor="@drawable/nubia_performance_balance_text_color"
                android:id="@+id/nubia_game_strength_performance_balance"
                android:layout_width="76dp"
                android:layout_height="30dp"
                android:text="@string/nubia_game_performance_mode_0"
                app:bottomIcon="@drawable/icon_endurance"
                style="@style/RadioButtonStyle"/>
            <cn.nubia.gameassist.performance.NubiaPerformanceRadioButton
                android:textColor="@drawable/nubia_performance_rise_text_color"
                android:id="@+id/nubia_game_strength_performance_rise"
                android:layout_width="76dp"
                android:layout_height="30dp"
                android:text="@string/nubia_game_performance_mode_1"
                app:bottomIcon="@drawable/icon_balance"
                style="@style/RadioButtonStyle"/>
            <cn.nubia.gameassist.performance.NubiaPerformanceRadioButton
                android:textColor="@drawable/nubia_performance_beyond_text_color"
                android:id="@+id/nubia_game_strength_performance_beyond"
                android:layout_width="76dp"
                android:layout_height="30dp"
                android:text="@string/nubia_game_performance_mode_2"
                app:bottomIcon="@drawable/icon_gaming"
                style="@style/RadioButtonStyle"/>
            <cn.nubia.gameassist.performance.NubiaPerformanceRadioButton
                android:textColor="@drawable/nubia_performance_infinite_text_color"
                android:id="@+id/nubia_game_strength_performance_infinite"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/nubia_game_performance_mode_3"
                style="@style/RadioButtonStyle"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:id="@+id/diablo_mode_group"
            android:background="@drawable/radio_button_bg"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textSize="10dp"
                android:textColor="#ffffffff"
                android:gravity="center"
                android:id="@+id/diablo_mode_tile"
                android:layout_width="57dp"
                android:layout_height="wrap_content"
                android:text="@string/nubia_game_performance_mode_diablo_title"
                android:singleLine="true"
                android:layout_marginStart="8dp"/>
            <TextView
                android:textSize="8dp"
                android:textColor="#ffffffff"
                android:id="@+id/diablo_mode_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/nubia_game_performance_mode_diablo_content"
                android:singleLine="true"
                android:layout_weight="1"/>
            <ImageButton
                android:id="@+id/diablo_mode_button"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/diablo_thumb"
                android:layout_marginEnd="8dp"/>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
