<?xml version="1.0" encoding="utf-8"?>
<cn.nubia.gameassist.plugin.sort.PluginSortWindow xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/item_custome_sort_hint_text_size"
            android:textColor="@color/game_tile_customize_label"
            android:layout_gravity="center"
            android:id="@+id/custom_hint"
            android:paddingTop="@dimen/plugin_tile_customize_content_margin_bottom"
            android:paddingBottom="@dimen/plugin_tile_customize_content_margin_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drag_plugin_item"
            android:layout_centerHorizontal="true"
            android:fontFamily="NotoSansCJKsc"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/custom_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/custom_hint"/>
    </RelativeLayout>
    <LinearLayout
        android:gravity="bottom|center_horizontal"
        android:paddingBottom="@dimen/item_custome_btn_padding_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:textSize="@dimen/tile_customize_btn_size"
            android:textColor="@color/game_tile_customize_label"
            android:id="@+id/cancel_button"
            android:background="@drawable/game_custom_button"
            android:layout_width="@dimen/game_pip_order_button_width"
            android:layout_height="@dimen/tile_customize_btn_height"
            android:layout_marginRight="@dimen/tile_customize_btn_margin_right"
            android:text="@string/cancel"
            android:textAllCaps="false"/>
        <Button
            android:textSize="@dimen/tile_customize_btn_size"
            android:textColor="@color/game_tile_customize_label"
            android:id="@+id/confirm_button"
            android:background="@drawable/game_custom_button"
            android:layout_width="@dimen/game_pip_order_button_width"
            android:layout_height="@dimen/tile_customize_btn_height"
            android:text="@string/confirm"
            android:textAllCaps="false"/>
    </LinearLayout>
</cn.nubia.gameassist.plugin.sort.PluginSortWindow>
