<?xml version="1.0" encoding="utf-8"?>
<cn.nubia.gameassist.dessert.custom.CustomTileOrder xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:forceDarkAllowed="false">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textSize="@dimen/tile_customize_content_title"
            android:textColor="@color/game_tile_customize_label"
            android:layout_gravity="center"
            android:paddingTop="@dimen/tile_customize_content_margin_top"
            android:paddingBottom="@dimen/tile_customize_content_margin_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custome_title"
            android:fontFamily="NotoSansCJKsc"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.recyclerview.widget.RecyclerView
                android:layout_gravity="center"
                android:id="@+id/custom_list"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tile_customize_content_recycle_height"/>
        </FrameLayout>
        <LinearLayout
            android:gravity="bottom|center_horizontal"
            android:paddingBottom="@dimen/tile_customize_padding_bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:textSize="@dimen/tile_customize_btn_size"
                android:textColor="@color/game_tile_customize_label"
                android:id="@+id/cancel_button"
                android:background="@drawable/game_custom_button"
                android:layout_width="@dimen/game_pip_order_button_width"
                android:layout_height="@dimen/tile_customize_btn_height"
                android:layout_marginRight="@dimen/tile_customize_btn_margin_right"
                android:text="@string/cancel"
                android:textAllCaps="false"/>
            <Button
                android:textSize="@dimen/tile_customize_btn_size"
                android:textColor="@color/game_tile_customize_label"
                android:id="@+id/confirm_button"
                android:background="@drawable/game_custom_button"
                android:layout_width="@dimen/game_pip_order_button_width"
                android:layout_height="@dimen/tile_customize_btn_height"
                android:text="@string/confirm"
                android:textAllCaps="false"/>
        </LinearLayout>
    </LinearLayout>
</cn.nubia.gameassist.dessert.custom.CustomTileOrder>
